[WR] Fix page zooming out on mobile

--- a/css/wr_mobile.css
+++ b/css/wr_mobile.css
@@ -1,3 +1,9 @@
+.truescore {
+    width: auto;
+}
+.truescores, .full_name {
+    width: auto;
+}
 #toggle_layout {
     display: none;
 }
